tests/paczka1/small_fuzzy/78884146.err
Error in line 2: NiNJwre A722 97,5
Error in line 5: kUefg S695 8,8
Error in line 10: 0HamqtFbAQ S197 31,9
